--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="/">Home</a>
       <a class="nav-item nav-link" href="/savedArticles">Saved Articles</a>
-      <button type="button" class="btn btn-warning">SCRAPE NEW ARTICLES!</button>
+      <button type="button" class="btn btn-warning" id="scrapeArticles">SCRAPE NEW ARTICLES!</button>
       <button type="button" class="btn btn-danger" id="clear-all">CLEAR ARTICLES!</button>
     </div>
   </div>
